--- a/crossfit-client/src/main/resources/templates/fragments/navbar.html
+++ b/crossfit-client/src/main/resources/templates/fragments/navbar.html
@@ -51,7 +51,7 @@
                     <a class="nav-link"  th:text="#{nav_bar_memberships}" th:href="@{/memberships/explore}" >Memberships</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                    <a class="nav-link" th:href="@{/profiles-dashboard/{id}(id=${#authentication.principal.id})}" th:text="#{nav_bar_all_user_profiles}">All User Profiles</a>
+                    <a class="nav-link" th:href="@{/profiles-dashboard}" th:text="#{nav_bar_all_user_profiles}">All User Profiles</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('COACH')">
                     <a class="nav-link" th:href="@{/my-weekly-schedule/{username}(username=${#authentication.principal.username})}" th:text="#{nav_bar_upcoming_trainings}">Upcoming Trainings</a>
