--- a/crossfit-client/src/main/resources/templates/index.html
+++ b/crossfit-client/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Pathfinder</title>
+    <title>Crossfit Web App</title>
     <!-- Thymeleaf expressions to dynamically generate URLs -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/indexStyle.css}" rel="stylesheet"/>
