--- a/crossfit-client/src/main/resources/templates/fragments/navbar.html
+++ b/crossfit-client/src/main/resources/templates/fragments/navbar.html
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/}"  th:classappend="${activeLink == 'brands'}? 'active'" th:text="#{nav_bar_home}">Home</a>
                 </li>
-                <li class="nav-item" sec:authorize= "!hasRole('ADMIN')">
+                <li class="nav-item" sec:authorize= "hasRole('USER')">
                     <a class="nav-link" th:href="@{/about-us}" th:text="#{nav_bar_about_us}">About Us</a>
                 </li>
                 <li class="nav-item" sec:authorize= "!hasRole('ADMIN')" >
