--- a/crossfit-client/src/main/resources/templates/schedule.html
+++ b/crossfit-client/src/main/resources/templates/schedule.html
@@ -200,112 +200,7 @@
     </div>
 </div>
 <!-- JavaScript to mark past trainings as unavailable -->
-<script th:inline="javascript">
-    document.getElementById('downloadPDF').addEventListener('click', function() {
-        const {jsPDF} = window.jspdf;
-
-        const doc = new jsPDF();
-
-        doc.setFontSize(16); // Reduced font size for title
-        doc.text('Weekly Training Schedule', 14, 20);
-
-        let y = 30;
-        const marginRight = 190; // Adjust this value to set right margin
-
-        function addTable(day, trainings) {
-            doc.setFontSize(14);
-            doc.text(day, 14, y);
-            y += 10;
-
-            doc.setFontSize(10); // Reduced font size for table content
-            doc.text('Training Type', 14, y);
-            doc.text('Date', 50, y);
-            doc.text('Coach', 85, y);
-            doc.text('Starts at', 120, y);
-            doc.text('Free Spots', 155, y);
-            doc.text('Joined', marginRight, y);
-
-            y += 12;
-
-            trainings.forEach(training => {
-                doc.text(training.trainingType, 14, y);
-                doc.text(training.date, 50, y);
-                doc.text(training.coach, 85, y);
-                doc.text(training.time, 120, y);
-                doc.text(training.freeSpots, 155, y);
-                doc.text(training.joined, marginRight, y);
-                y += 12;
-
-                if (y > 270) { // Check if the current position exceeds page height
-                    doc.addPage();
-                    y = 20; // Reset vertical position for the new page
-                    doc.setFontSize(10); // Ensure font size is consistent
-                }
-            });
-
-            y += 7; // Add extra space between days
-        }
-
-        function getTrainingDataForDay(day) {
-            const dayCards = Array.from(document.querySelectorAll('.day-heading')).find(e => e.innerText.includes(day)).parentElement;
-            const trainingData = [];
-
-            dayCards.querySelectorAll('.card').forEach(card => {
-                trainingData.push({
-                    trainingType: card.querySelector('.card-title').innerText,
-                    date: card.querySelector('.card-date').innerText,
-                    coach: card.querySelector('.coach').innerText,
-                    time: card.querySelector('.time').innerText,
-                    freeSpots: card.querySelector('.free-spots').innerText,
-                    joined: card.querySelector('.text-dark') ? 'Yes' : 'No'
-                });
-            });
-
-            return trainingData;
-        }
-
-        const days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-
-        days.forEach(day => {
-            const trainings = getTrainingDataForDay(day);
-            addTable(day, trainings);
-        });
-
-        doc.save('trainings_schedule.pdf');
-
-    });
-
-    /*<![CDATA[*/
-    document.addEventListener('DOMContentLoaded', function() {
-        var now = new Date();
-        var cards = document.querySelectorAll('.card');
-
-        cards.forEach(function(card) {
-            var dateString = card.querySelector('.card-date').textContent.trim();
-            var timeString = card.querySelector('.time').textContent.trim().substring(14); // Extracting only HH:mm
-            var dateTimeString = dateString + ' ' + timeString;
-            console.log(dateTimeString);
-            var trainingDate = new Date(dateTimeString);
-
-
-            if (trainingDate < now) {
-                var cardBody = card.querySelector('.card-body');
-                cardBody.classList.add('unavailable'); // Example class to style past trainings
-                // Hide the join button or any other specific content for past trainings
-                var joinButton = card.querySelector('.btn-join');
-                if (joinButton) {
-                    joinButton.style.display = 'none';
-                }
-
-                var messageDiv = document.createElement('div');
-                messageDiv.className = 'text-danger mt-2'; // Add margin-top for spacing
-                messageDiv.innerHTML = '<span>This training is in the past</span>';
-                cardBody.appendChild(messageDiv);
-            }
-        });
-    });
-    /*]]>*/
-</script>
+<script th:src="@{js/schedule.js}"></script>
 <footer th:replace="~{fragments/footer::footer}"></footer>
 </body>
 </html>
